objects/adapps__OptimizerPlus_Custom_Field_Limit_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adapps__Custom_Field_Limit__c</fullName>
        <label>Custom Field Limit</label>
        <referenceTo>adapps__OptimizerPlus_Custom_Field_Limit__c</referenceTo>
        <relationshipLabel>Custom Field Limit Items</relationshipLabel>
        <relationshipName>Custom_Field_Limit_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Custom Field Limit Item</label>
    <nameField>
        <label>Field Limit Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Field Limit Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>